tests/cases/smoke/invalid/class_const_no_default.dp
class Fish {
    const species: str
}
